2010-12-23 Malignant Manor <malignantmanor@users.sourceforge.net>
	* game.cc: Disabled into and ending for new games not based
		on U7 data
	* keyactions.cc: Only allow one cstat gump to show

2010-12-23 Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.cc: Made party member only not call fight_back() if
		dead and the attacker is a party member. Made fight_back()
		have the party fight back if in combat mode and one of the
		party members takes damage.
	* gamewin.cc: Made paused_combat_select put the attacking party
		member into combat mode if not already.

2010-12-22 Malignant Manor <malignantmanor@users.sourceforge.net>
	* browser.cc, keyaction.*, keys.*: Add shape_browser_help
		key binding that displays the shape browser keys. Shape
		browser menu now shows the keys when you press 'K'.

2010-12-21 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gumps/Spellbook_gump.cc: Spellbooks can now be edited in map
		edit mode. Exult Studio doesn't detect any changes in it so
		Save all is unreliable with it. Choose File->Save...->Map
	* schedule.cc: Make sure plate used in Eat isn't deleted if it
		wasn't created.

2010-12-21 Malignant Manor <malignantmanor@users.sourceforge.net>
	* mapedit/npcedit.cc, mapedit/studio.*: Add check for saving
		npc editing when apply is clicked.

2010-12-21 Malignant Manor <malignantmanor@users.sourceforge.net>
	*actors.cc, schedule.*: Add eat schedule. (eat was using sit)
		It doesn't work yet if there is no plate nearby.

2010-12-21 Malignant Manor <malignantmanor@users.sourceforge.net>
	* schedule.*: Made Eat_at_inn clear food when ending. Fix bug
		where leftover food in oven would be set to a random frame.
		Set the maximum display count for clothes to 3. Remove
		schedule ending exceptions.

2010-12-20 Dominik Reichardt <dominus@users.sourceforge.net>
	* configure.ac: fixed X11 includes on FeeBSD, and warning of ==
	
2010-12-20 Malignant Manor <malignantmanor@users.sourceforge.net>